[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "correlationHistogramAnalysis"
version = "0.2.1"
license = { file = "LICENSE.txt" }
authors = [
  { name="Shyam Katnagallu", email="s.katnagallu@mpie.de" },
]
description = "A package for correlation histogram analysis in APT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/skatnagallu/CorrelationHistogram"
Issues = "https://github.com/skatnagallu/CorrelationHistogram/issues"

